# text-editor

./: .gitignore  README.md  main.py  model.py  pyproject.toml
src/text_editor/: effects.py  events.py  input_handler.py  main.py  model.py  update.py  view.py
tests/: test_main.py  test_model.py  test_update.py  test_view.py
